 - [ZBXNEXT-696] Added support for {IPADDRESS}, {HOST.DNS} and {HOST.CONN} macros in trigger names (rudolfs)
 - [ZBX-3495] fixed interfaceid updated to null when link template (Vedmak)
 - [ZBXNEXT-676] merged host profile and extended host profile (Sasha, Vedmak)

Bug fixes:
 - [ZBX-3623] fixed processing of nanoseconds for history data (Sasha)
 - [ZBX-3634] imporved zabbix map API methods (Aly)
 
--------------------------------------------------------------------------------
Changes for 1.9.2

New features:
 - [ZBXNEXT-673] added support of users scripts on Zabbix Agent and IPMI-based remote commands (Sasha, Vedmak)
 - [ZBXNEXT-631] added custom trigger severities configuration (Sasha, Vedmak)
 - [ZBXNEXT-636] login screen redesign, frontend themes restyle (Aly, Elvis)
 - [ZBXNEXT-635] introduced API wrapper for Zabbix frontend (Vedmak, Aly)
 - [ZBXNEXT-575] added new design for action operation remote commands (Aly,asaveljevs,Sasha,Vedmak)
 - [ZBXNEXT-628] added advanced label settings for maps (Aly)
 - [ZBXNEXT-626] added remembering of grid options for maps (KB)
 - [ZBXNEXT-630] added automatic filling of DNS name for discovered and auto-registered devices (Sasha)
 - [ZBXNEXT-634] added information about usage of media types for actions in the list of media types (Alexei)
 - [ZBXNEXT-602] Export events to CSV (Vlad,Aly)
 - [ZBXNEXT-623] restored support of SQLite3 for use with Zabbix Server and front-end (Alexei)
 - [ZBX-1357] updated Dutch translation; thanks to qix (Richlv)
 - [ZBX-1357] updated Latvian translation (Richlv)
 - [ZBXNEXT-594] Add to Zabbix API support for search and filter by rules "ALL" or "ANY" (Vlad)
 - [ZBXNEXT-592] confirmation dialog for scripts (Vedmak)
 - [ZBX-3355] added character field length validation on inserts and updates (KB)
 - [ZBX-3370] updated Russian translation; thanks to zalex_ua and dotneft (Richlv)
 - [ZBX-3338] updated Ukrainian translation; thanks to zalex_ua (Richlv)

Bug fixes: